--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "name": "angellolopez"
         }
     ],
-    "require": {},
+    "require": {
+        "intervention/image": "^3.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\":"classes/"
